# villen

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN-villen.md  README.md
.github/workflows/: ci.yml  claude-code-review.yml
client/: filter.html  index.html  style.css
client/chat/: chat.js  index.html  style.css
client/filter/: filter.js  index.html
client/input/: gamepad.js  pointer.js
client/snake/: index.html  snake.js
client/src/: app.js  board.js  heatmap.js  net.js
docs/: CODE-REVIEW.md  DESIGN-admin-shell.md  DESIGN-canvas.md  DESIGN-chat.md  DESIGN-engine-roadmap.md  DESIGN-ensemble.md  DESIGN-filter.md  DESIGN-game-framework.md  DESIGN-jam.md  DESIGN-self-hotfix.md  DESIGN-snake.md  DESIGN-spectator-and-agent-api.md  DESIGN-villen.md  steamdeck-debugging.md  ui-art-needs.md  villen-art-brief.md
engine/: CMakeLists.txt
engine/include/villen/chat/: conversation.hpp  prompt.hpp  sse.hpp
engine/include/villen/chess/: move.hpp  position.hpp  types.hpp
engine/include/villen/filter/: image.hpp  morphology.hpp  pipeline.hpp  presets.hpp
engine/include/villen/snake/: pathfinding.hpp  types.hpp  world.hpp
engine/src/: move.cpp  position.cpp  types.cpp
engine/src/chat/: conversation.cpp  prompt.cpp  sse.cpp
engine/src/filter/: image.cpp  morphology.cpp  pipeline.cpp  presets.cpp
engine/src/snake/: pathfinding.cpp  world.cpp
host/: CMakeLists.txt
host/src/: admin_ui.cpp  admin_ui.hpp  engine.hpp  envelope.cpp  envelope.hpp  host.cpp  host.hpp  llama_client.cpp  llama_client.hpp  llama_process.cpp  llama_process.hpp  main.cpp  net_util.cpp  net_util.hpp  protocol.cpp  protocol.hpp  room.cpp  room.hpp  session.cpp  session.hpp  ws_server.cpp  ws_server.hpp
host/src/engines/chat/: chat_engine.cpp  chat_engine.hpp
host/src/engines/chess/: chess_engine.cpp  chess_engine.hpp
host/src/engines/filter/: filter_engine.cpp  filter_engine.hpp  gpu_backend.cpp  gpu_backend.hpp  stb_impl.cpp
host/src/engines/snake/: snake_engine.cpp  snake_engine.hpp
rc/: README.md
rc/ui/: README.md
spike/chat-bench/: .gitignore  README.md  bench.py  fake_llama_server.py
spike/deck/: CMakeLists.txt  README.md  glibc_compat.h  main.cpp
spike/storage-bench/: .gitignore  README.md  diskbench.py
tests/: CMakeLists.txt  chat_e2e.py  chat_tests.cpp  engine_tests.cpp  filter_tests.cpp  integration_tests.cpp  snake_integration_tests.cpp  snake_tests.cpp  ws_test_client.hpp
tests/e2e/: filter_e2e.py  run_filter_e2e.sh
tools/: build-deck.sh  deploy-to-deck.sh  generate-ui-art.mjs  tls-proxy.sh
